--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "cwd": "${fileDirname}"
-          }
+            // "type": "lldb",
+            // "request": "launch",
+            // "name": "Debug",
+            // "program": "${fileDirname}/${fileBasenameNoExtension}",
+            // "args": [],
+            // "cwd": "${fileDirname}"
+        }
     ]
 }
